@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <fileset-config file-format-version="1.2.0" simple-config="true">
-    <fileset name="Alle" enabled="true" check-config-name="Sun Checks" local="false">
+    <fileset name="Alle" enabled="true" check-config-name="MogwaiChecks" local="false">
         <file-match-pattern match-pattern="." include-pattern="true"/>
     </fileset>
 </fileset-config>
